--- a/week3/pnadas_las_vegas.ipynb
+++ b/week3/pnadas_las_vegas.ipynb
@@ -839,8 +839,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b411748d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(\"price\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ce5a1f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>roomType</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>address</th>\n",
+       "      <th>numberOfGuests</th>\n",
+       "      <th>primaryHost/smartName</th>\n",
+       "      <th>firstReviewComments</th>\n",
+       "      <th>firstReviewRating</th>\n",
+       "      <th>new_col</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Entire condo</td>\n",
+       "      <td>4.54</td>\n",
+       "      <td>Las Vegas, Nevada, United States</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Doug</td>\n",
+       "      <td>Overall, I had a good experience. The only dow...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Entire rental unit</td>\n",
+       "      <td>4.39</td>\n",
+       "      <td>Las Vegas, Nevada, United States</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Doug</td>\n",
+       "      <td>I stayed an extra night. That should sum it up...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Entire guest suite</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Las Vegas, Nevada, United States</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Aaron&amp;Tina</td>\n",
+       "      <td>These days things are so impersonable but she ...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Entire condo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Las Vegas, Nevada, United States</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Aaron&amp;Tina</td>\n",
+       "      <td>Great response time from owner. Could message ...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Private room in home</td>\n",
+       "      <td>4.51</td>\n",
+       "      <td>Las Vegas, Nevada, United States</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Brad</td>\n",
+       "      <td>good group of guys in the house. quiet clean a...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               roomType  stars                           address  \\\n",
+       "0          Entire condo   4.54  Las Vegas, Nevada, United States   \n",
+       "1    Entire rental unit   4.39  Las Vegas, Nevada, United States   \n",
+       "2    Entire guest suite    NaN  Las Vegas, Nevada, United States   \n",
+       "3          Entire condo    NaN  Las Vegas, Nevada, United States   \n",
+       "4  Private room in home   4.51  Las Vegas, Nevada, United States   \n",
+       "\n",
+       "   numberOfGuests primaryHost/smartName  \\\n",
+       "0               4                  Doug   \n",
+       "1               4                  Doug   \n",
+       "2               4            Aaron&Tina   \n",
+       "3               6            Aaron&Tina   \n",
+       "4               2                  Brad   \n",
+       "\n",
+       "                                 firstReviewComments  firstReviewRating  \\\n",
+       "0  Overall, I had a good experience. The only dow...                4.0   \n",
+       "1  I stayed an extra night. That should sum it up...                5.0   \n",
+       "2  These days things are so impersonable but she ...                5.0   \n",
+       "3  Great response time from owner. Could message ...                5.0   \n",
+       "4  good group of guys in the house. quiet clean a...                5.0   \n",
+       "\n",
+       "   new_col  \n",
+       "0      8.0  \n",
+       "1      9.0  \n",
+       "2      9.0  \n",
+       "3     11.0  \n",
+       "4      7.0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c61be2",
    "metadata": {},
    "outputs": [],
    "source": []
