--- a/week3/assigment/Titanic_Assigment_Musalimov.ipynb
+++ b/week3/assigment/Titanic_Assigment_Musalimov.ipynb
@@ -2283,8 +2283,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "e1744e45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46f66825",
    "metadata": {},
    "outputs": [],
    "source": []
