week4 logistic_regression_assingment

--- a/week4/car_price_musalimov.ipynb
+++ b/week4/car_price_musalimov.ipynb
@@ -4078,7 +4078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "id": "8545d5ee",
    "metadata": {},
    "outputs": [],
@@ -4086,7 +4086,7 @@
     "# Question: \n",
     "# 1) Is it acceptable to map car types (such as convertible, hatchback, sedan, etc.) to numerical values, \n",
     "#    or will this create an weight system (e.g., 1 = bad, 5 = good)?\n",
-    "# 2) Do I interpret the RMSE metric correctly that it is actually quite good, just 58$ differnce in prediction? "
+    "# 2) Am I correct in understanding that the RMSE metric indicates the prediction is quite accurate, with only a $53 difference? "
    ]
   },
   {
